--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,14 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<h1>Madlibs</h1>
+<form action="/story">
+    {% for prompt in prompts%}
+    <div class="prompt-box">
+        <label for="prompt">{{prompt}}</label>
+        <input id="prompt" type="text" name={{prompt}}>
+    </div>
+    {%endfor%}
+    <button>Submit!</button>
+</form>
 
-
-
-{% endblock %}
